--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -4,8 +4,11 @@
 name: first workflow
 on: push # 이벤트 트리거
 jobs: # jobs:
-  hello_world: # job의 이름
-    runs-on: ubuntu-latest
-    steps: # step 정의
-      - name: Hello World # step의 이름
-        run: echo "Hello, World!" # run : <cli 명령어>
+    hello_world: # job의 이름
+        runs-on: ubuntu-latest
+        steps: # step 정의
+            - name: Hello World # step의 이름
+              run: echo "Hello, World!" # run : <cli 명령어>
+
+            - name: Checkout Code
+              uses: actions/checkout@4 #action -> 재사용가능한 작업
