--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -11,4 +11,7 @@ jobs: # jobs:
               run: echo "Hello, World!" # run : <cli 명령어>
 
             - name: Checkout Code
-              uses: actions/checkout@4 #action -> 재사용가능한 작업
+              uses: actions/checkout@4 # action -> 재사용가능한 작업
+
+            - name: install deps
+              run: npm ci # ci -> clean install -> package-lock.json
