--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -7,11 +7,34 @@ jobs: # jobs:
     hello_world: # job의 이름
         runs-on: ubuntu-latest
         steps: # step 정의
-            - name: Hello World # step의 이름
-              run: echo "Hello, World!" # run : <cli 명령어>
-
             - name: Checkout Code
-              uses: actions/checkout@4 # action -> 재사용가능한 작업
+              uses: actions/checkout@v4 # action -> 재사용가능한 작업
+
+              # 노드 버전을 맞춰야 할 경우에 가상환경에 노드를 추가 설치
+            - name: install nodejs
+              uses: actions/setup-node@v4
+              with:
+                  node-version: "22"
 
             - name: install deps
               run: npm ci # ci -> clean install -> package-lock.json
+
+            - name: run build
+              run: npm run build
+
+    lint:
+        runs-on: ubuntu-latest
+        steps:
+            - name: checkout code
+              uses: actions/checkout@v4
+
+            - name: install nodejs
+              uses: actions/setup-node@v4
+              with:
+                  node-version: "22"
+
+            - name: install dependencies
+              uses: npm ci
+
+            - name: run lint
+              uses: npm run lint
