--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -4,24 +4,6 @@
 name: first workflow
 on: push # 이벤트 트리거
 jobs: # jobs:
-    hello_world: # job의 이름
-        runs-on: ubuntu-latest
-        steps: # step 정의
-            - name: Checkout Code
-              uses: actions/checkout@v4 # action -> 재사용가능한 작업
-
-              # 노드 버전을 맞춰야 할 경우에 가상환경에 노드를 추가 설치
-            - name: install nodejs
-              uses: actions/setup-node@v4
-              with:
-                  node-version: "22"
-
-            - name: install deps
-              run: npm ci # ci -> clean install -> package-lock.json
-
-            - name: run build
-              run: npm run build
-
     lint:
         runs-on: ubuntu-latest
         steps:
@@ -38,3 +20,20 @@ jobs: # jobs:
 
             - name: run lint
               uses: npm run lint
+    build: # job의 이름
+        runs-on: ubuntu-latest
+        steps: # step 정의
+            - name: Checkout Code
+              uses: actions/checkout@v4 # action -> 재사용가능한 작업
+
+              # 노드 버전을 맞춰야 할 경우에 가상환경에 노드를 추가 설치
+            - name: install nodejs
+              uses: actions/setup-node@v4
+              with:
+                  node-version: "22"
+
+            - name: install deps
+              run: npm ci # ci -> clean install -> package-lock.json
+
+            - name: run build
+              run: npm run build
