--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -16,10 +16,27 @@ jobs: # jobs:
                   node-version: "22"
 
             - name: install dependencies
-              uses: npm ci
+              run: npm ci
 
             - name: run lint
-              uses: npm run lint
+              run: npm run lint
+
+    test:
+        runs-on: ubuntu-latest
+        steps:
+            - name: checkout Code
+              uses: actions/checkout@v4
+
+            - name: install nodejs
+              uses: actions/setup-node@v4
+              with:
+                  node-version: "22"
+
+            - name: install dependencies
+              run: npm ci
+
+            - name: run test
+              run: npm run test
 
     # lint -> build
     build: # job의 이름
@@ -27,9 +44,11 @@ jobs: # jobs:
 
         # build job 이전에 lint job이 선행되어야함
         # 순차적으로 실행이 되어야함
-        needs: lint
+        # 단일 선행 작업 -> needs: <job name>
+        # 하나 이상의 선행작업이 필요하면 needs: [<job name1>, <job name2>]
+        needs: [lint, test]
         steps: # step 정의
-            - name: Checkout Code
+            - name: checkout Code
               uses: actions/checkout@v4 # action -> 재사용가능한 작업
 
               # 노드 버전을 맞춰야 할 경우에 가상환경에 노드를 추가 설치
@@ -38,7 +57,7 @@ jobs: # jobs:
               with:
                   node-version: "22"
 
-            - name: install deps
+            - name: install dependencies
               run: npm ci # ci -> clean install -> package-lock.json
 
             - name: run build
