--- a/.github/workflows/basic-ci.yml.yml
+++ b/.github/workflows/basic-ci.yml.yml
@@ -1,19 +1,29 @@
 name: Basic CI
-on: [push, pull_request]
-jobs: # jobs:
+
+on:
+    push:
+        branches: main
+    pull_request:
+        branches: main
+
+jobs:
     ci:
         runs-on: ubuntu-latest
         steps:
             - name: checkout code
               uses: actions/checkout@v4
 
-            - name: install nodejs
+            - name: setup Node.js
               uses: actions/setup-node@v4
               with:
                   node-version: "18"
+                  cache: "npm"
 
-            - name: install dependencies
-              run: npm ci
+            - name: Install dependencies
+              uses: run ci
 
-            - name: run ci
-              run: npm run ci
+            - name: run test
+              run: npm test
+
+            - name: Build project
+              run: npm build
