gha:github_repository

--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -4,21 +4,14 @@
 name: first workflow
 on: push # 이벤트 트리거
 env:
-    NEXT_PUBLIC_SUPABASE_URL: "https://some-url.supabase.co"
+    GITHUB_REPOSITORY: "octocat/Hello-World"
 jobs: # jobs:
     lint-test-build:
         runs-on: ubuntu-latest
-        env:
-            JOB_LEVEL_ENV: "job level 환경변수"
-
         steps:
             - name: Print Environment Variables
-              run: echo "$ {{ env.NEXT_PUBLIC_SUPABASE_URL }}"
-    print-env:
-        runs-on: ubuntu-latest
-        steps:
-            - name: env test
-              run: echo "$ {{ env.JOB_LEVEL_ENV }}"
+              run: echo "$ {{ env.GITHUB_REPOSITORY }}"
+
     # lint:
     #     runs-on: ubuntu-latest
     #     steps:
