gha: step env test

--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -1,16 +1,53 @@
 # 워크플로우 -> 자동화 할 작업의 설계서 -> action.yml
 #
 
+# name: first workflow
+# on: push # 이벤트 트리거
+# env:
+#     GITHUB_REPOSITORY, GITHUB_SHAGITHUB_REF
+# jobs: # jobs:
+#     lint-test-build:
+#         runs-on: ubuntu-latest
+#         env:
+#             JOB_LEVEL_ENV: "job level 환경변수"
+
+#         steps:
+#             - name: Print Environment Variables
+#               run: echo "$ {{ env.NEXT_PUBLIC_SUPABASE_URL }}"
+#     print-env:
+#         runs-on: ubuntu-latest
+#         steps:
+#             - name: env test
+#               run: echo "$ {{ env.JOB_LEVEL_ENV }}"
+
 name: first workflow
 on: push # 이벤트 트리거
 env:
-    GITHUB_REPOSITORY: "octocat/Hello-World"
+    GITHUB_REPOSITORY: ""
+    GITHUB_SHA: ""
+    GITHUB_REF: ""
 jobs: # jobs:
     lint-test-build:
         runs-on: ubuntu-latest
+        env:
+            JOB_LEVEL_ENV: "job level 환경변수"
         steps:
-            - name: Print Environment Variables
+            - name: Print Environment Variables GITHUB_REPOSITORY
               run: echo "$ {{ env.GITHUB_REPOSITORY }}"
+
+            - name: Print Environment Variables GITHUB_SHA
+              run: echo "$ {{ env.GITHUB_SHA }}"
+
+            - name: Print Environment Variables GITHUB_REF
+              run: echo "$ {{ env.GITHUB_REF }}"
+
+            - name: print job env
+              run: echo " $ {{ env.JOB_LEVEL_ENV}} "
+
+            - name: print step env
+              run: echo " $ {{ env.STEP_LEVEL_ENV}} "
+              env:
+                  STEP_LEVEL_ENV: "step level 환경변수"
 
     # lint:
     #     runs-on: ubuntu-latest
