--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -29,7 +29,7 @@ jobs: # jobs:
             JOB_LEVEL_ENV: "job level 환경변수"
         steps:
             - name: Print Environment Variables
-              run: ｜
+              run: \
                   echo "JOB_LEVEL_ENV ${{ env.JOB_LEVEL_ENV}} "
                   echo "Secret ${{ secrets.TEST_SECRET}} "
 
